# JV4L2

./: .gitignore  README.md  build.gradle  settings.gradle
cpp/: CMakeLists.txt  JV4L2.c  org_jv4l2_Jv4l2JNI.h
gradle/wrapper/: gradle-wrapper.properties
native/: CMakeLists.txt  JV4L2.c
native/cmake/: FindV4L2.cmake
src/main/java/org/jv4l2/: Camera.java  Jv4l2JNI.java  V4L2.java
